# obsidian_scripts

./: .gitignore  README.md  addMethods.py  findAllReferences.py  pyproject.toml  replaceMethods.py  test_findAllReferences.py
src/: addMethods.py  createNotesMethods.py  exportNotes.py  findAllReferences.py  replaceMethods.py
