[project]
name = "obsidian-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Kostka",email = "mail@ben-kostka.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
